--- a/src/scss/views/home.scss
+++ b/src/scss/views/home.scss
@@ -48,8 +48,8 @@ h1.enjoy-ola{
 
 
 .intro-beach{
-  margin-top:6vw;
-  margin-bottom:6vw;
+  margin-top:2vw;
+  margin-bottom:4vw;
 }
 
 /*More Link */
@@ -98,7 +98,7 @@ h1.enjoy-ola{
 
 /*our-rooms*/
 .rooms-01{
-  margin-bottom:6vw;
+  margin-bottom:4vw;
 }
 
 .rooms-02{
